test/classes/deitz/field/const_field_error.good
const_field_error.chpl:8: error: cannot assign to const variable
